[workspace]
members = ["derive", "example"]

[workspace.package]
version = "2.0.1"
edition = "2021"
authors = ["mbecker20"]
repository = "https://github.com/mbecker20/mongo_indexed"
license = "GPL-3.0-or-later"

[package]
name = "mongo_indexed"
description = "derive macro to declaratively index mongo collections"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mongo_indexed_derive = "2.0.0"
thiserror = "1.0"
serde = "1.0"
mongodb = "3.0"
