[package]
name = "mongo_indexed_derive"
description = "derive macro to declaratively index mongo collections"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
