[package]
name = "example"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mongo_indexed = { path = ".." }
mongo_indexed_derive = { path = "../derive" }
tokio = "1.38.0"
mongodb = "3.0.0"
anyhow = "1.0.86"
serde = "1.0.203"